[gd_scene load_steps=19 format=2]

[ext_resource path="res://Resources/Map1.png" type="Texture" id=1]
[ext_resource path="res://Bots/Blub/BlubBot.gd" type="Script" id=2]
[ext_resource path="res://Bots/Blub/BlubBotBlueSparkles.tres" type="Material" id=3]

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CircleShape2D" id=15]
radius = 2.0

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 16, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 112, 192, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 1 ), SubResource( 1 ), SubResource( 3 ), SubResource( 3 ), SubResource( 3 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="Gradient" id=16]
offsets = PoolRealArray( 0, 0.78882, 1 )
colors = PoolColorArray( 0.831373, 0.952941, 0.976471, 1, 0.270588, 0.905882, 0.960784, 0.258824, 0, 0.564706, 0.596078, 0 )

[sub_resource type="GradientTexture" id=17]
gradient = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.6
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
damping_random = 0.48
scale = 0.4
scale_random = 0.16
color_ramp = SubResource( 17 )
hue_variation = 0.02

[node name="BlubBot" type="KinematicBody2D" groups=["food"]]
input_pickable = true
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 11 )
position = Vector2( -1, -1 )
amount = 25
lifetime = 10.0
randomness = 0.14
visibility_rect = Rect2( -300, -300, 300, 300 )
local_coords = false
process_material = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CollisionShape2D"]
position = Vector2( 1, 1 )
frames = SubResource( 10 )
frame = 16
playing = true

[node name="BiteParticles" type="Particles2D" parent="." groups=["temp_particle"]]
visible = false
position = Vector2( -1, -1 )
z_as_relative = false
emitting = false
amount = 50
lifetime = 7.5
one_shot = true
speed_scale = 2.94
explosiveness = 1.0
process_material = SubResource( 18 )

[node name="Tween" type="Tween" parent="."]

[node name="EachSecondTimer" type="Timer" parent="."]

[connection signal="input_event" from="." to="." method="_on_BlubBot_input_event"]
[connection signal="timeout" from="EachSecondTimer" to="." method="_on_EachSecondTimer_timeout"]
